fix: gallery z-index

--- a/src/styles/item-page.scss
+++ b/src/styles/item-page.scss
@@ -109,6 +109,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 3;
 }
 
 @media screen and (max-width: 1200px) {
